--- a/week 1/index.html
+++ b/week 1/index.html
@@ -26,18 +26,19 @@
                 <h2>Sign up</h2>
                 <p>Please fill the field below accurately!</p>
                 <section class="form-container">
-                    <form method="post">
-                        <div class="username">
+                    <form id="signupForm" method="post">
+                        <div class="form-group">
                         <label for="username">Username:</label>
                         <input type="text" id="username" name="username" placeholder="Enter Your Username" required>
                         <span class="errorMessage" id="userNameError"></span>
                         </div>
 
-                        <div class="email">
+                        <div class="form-group">
                         <label for="email">Email:</label>
                         <input type="email" id="email" name="email" placeholder="example123@email.com" required>
+                        <span class="errorMessage" id="emailError"></span>
                         </div>
-                        <div>
+                        <div class="form-group">
                         <label for="password">Password:</label>
                         <input type="password" id="password" name="password" placeholder="password" required>
                         <span class="errorMessage" id="passwordError"></span>
