--- a/week 1/index.html
+++ b/week 1/index.html
@@ -30,7 +30,7 @@
                         <div class="form-group">
                         <label for="username">Username:</label>
                         <input type="text" id="username" name="username" placeholder="Enter Your Username" required>
-                        <span class="errorMessage" id="userNameError"></span>
+                        <span class="errorMessage" id="usernameError"></span>
                         </div>
 
                         <div class="form-group">
