--- a/week 1/index.html
+++ b/week 1/index.html
@@ -25,10 +25,11 @@
             <div class="formField">
                 <h2>Sign up</h2>
                 <p>Please fill the field below accurately!</p>
+                <p>All fields with (*) are required.</p>
                 <section class="form-container">
                     <form id="signupForm" method="post">
                         <div class="form-group">
-                        <label for="username">Username:</label>
+                        <label for="username">Username: </label>
                         <input type="text" id="username" name="username" placeholder="Enter Your Username" required>
                         <span class="errorMessage" id="usernameError"></span>
                         </div>
@@ -39,7 +40,7 @@
                         <span class="errorMessage" id="emailError"></span>
                         </div>
                         <div class="form-group">
-                        <label for="password">Password:</label>
+                        <label for="password">Password: </label>
                         <input type="password" id="password" name="password" placeholder="password" required>
                         <span class="errorMessage" id="passwordError"></span>
                             </div>
